Add image rendering

--- a/Smashscii.vcxproj
+++ b/Smashscii.vcxproj
@@ -141,6 +141,9 @@
     <ClInclude Include="Source\Engine\Image.h" />
     <ClInclude Include="Source\Engine\Vector2D.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Todo.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
