--- a/Smashscii.vcxproj.filters
+++ b/Smashscii.vcxproj.filters
@@ -57,4 +57,7 @@
       <Filter>Header Files\Engine</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Todo.txt" />
+  </ItemGroup>
 </Project>
