add player class, and image destructor

--- a/Smashscii.vcxproj
+++ b/Smashscii.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Game\Player.cpp" />
     <ClCompile Include="Source\Engine\Background.cpp" />
     <ClCompile Include="Source\Engine\Engine.cpp" />
     <ClCompile Include="Source\Engine\Entity.cpp" />
@@ -135,6 +136,7 @@
     <ClCompile Include="Source\Smashscii.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Game\Player.h" />
     <ClInclude Include="Source\Engine\Background.h" />
     <ClInclude Include="Source\Engine\Engine.h" />
     <ClInclude Include="Source\Engine\Entity.h" />
