--- a/Smashscii.vcxproj.filters
+++ b/Smashscii.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Source\Game\Game.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Engine\Background.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files\Engine</Filter>
     </ClInclude>
     <ClInclude Include="Source\Game\Game.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game\Player.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
   </ItemGroup>
