add projectile class

--- a/Smashscii.vcxproj
+++ b/Smashscii.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Game\Projectile.cpp" />
     <ClCompile Include="Source\Game\Player.cpp" />
     <ClCompile Include="Source\Engine\Background.cpp" />
     <ClCompile Include="Source\Engine\Engine.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="Source\Smashscii.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Game\Projectile.h" />
     <ClInclude Include="Source\Game\Player.h" />
     <ClInclude Include="Source\Engine\Background.h" />
     <ClInclude Include="Source\Engine\Engine.h" />
